# promptpy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.rst
src/promptpy/: __init__.py  prompt.py
