[project]
name = "promptpy"
version = "0.1.0"
description = "A Python command line input and validation library"
readme = "README.md"
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.9.4",
]

[tool.mypy]
packages = ["src.promptpy"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=promptpy tests/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
]
